--- a/electron/package.json
+++ b/electron/package.json
@@ -185,6 +185,7 @@
     "lodash": "^4.17.4",
     "lodash-joins": "^2.0.2",
     "moment": "^2.17.1",
+    "mqtt": "^2.5.0",
     "mssql": "^3.3.0",
     "querystring": "^0.2.0",
     "react": "^15.4.2",
@@ -204,6 +205,7 @@
     "redux-thunk": "^2.2.0",
     "sorty": "^1.2.2",
     "source-map-support": "^0.4.10",
+    "stream-browserify": "^2.0.1",
     "tedious": "^1.14.0"
   },
   "devEngines": {
