--- a/electron/package.json
+++ b/electron/package.json
@@ -159,6 +159,7 @@
     "mocha": "^3.2.0",
     "pdfjs-dist": "^1.7.316",
     "react-addons-test-utils": "^15.4.2",
+    "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.7.4",
     "sinon": "^1.17.7",
     "spectron": "^3.4.1",
