--- a/electron/package.json
+++ b/electron/package.json
@@ -182,6 +182,7 @@
     "electron-settings": "^2.2.2",
     "expose-loader": "^0.7.3",
     "font-awesome": "^4.7.0",
+    "fusioncharts": "^3.12.0",
     "image-webpack-loader": "^2.0.0",
     "jsreport-client": "^0.4.1",
     "lodash": "^4.17.4",
@@ -198,6 +199,7 @@
     "react-data-grid": "^2.0.11",
     "react-datagrid": "^2.1.2",
     "react-dom": "^15.4.2",
+    "react-fusioncharts": "^1.0.4",
     "react-horizontal-gauge": "^0.1.2",
     "react-odometerjs": "^1.0.1",
     "react-progress-button": "^5.0.1",
